my plan section

--- a/index.html
+++ b/index.html
@@ -1,17 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>New Year New Me</title>
-</head>
-<body>
-    <header>
-        <nav></nav>
+
+    <!-- css file  -->
+    <link rel="stylesheet" href="style/style.css" />
+
+    <!-- icon -->
+    <link
+      rel="icon"
+      href="https://img.icons8.com/liquid-glass/48/portfolio.png"
+    />
+
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="font-work-sans">
+    <header class="navbar">
+      <nav class="nav-container content">
+        <div class="logo">
+          <h2>Tr<span class="color-orange">a</span>y</h2>
+        </div>
+
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Projrct</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About Us</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
+      <section class="banner">
+        <div class="banner-container conainer">
+          <div class="banner-content">
+            <h1>All Thinks Are Possible If You believe</h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words
+            </p>
+            <button class="btn">Cotact Us</button>
+          </div>
+        </div>
+      </section>
 
+      <section id="failure">
+        <div class="failure-container">
+          <div class="failure-content">
+            <div class="img">
+              <img src="images/person.png" alt="" />
+            </div>
+            <div class="text">
+              <h2>My failures of previous year</h2>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old. Richard McClintock.
+              </p>
+              <div class="counter-text">
+                <p>✔️ Contrary to popular belief, is not simply.</p>
+                <p>✔️ Contrary to popular belief.</p>
+                <p>✔️ Contrary to popular , is not simply.</p>
+                <p>✔️ Contrary to popular belief, is not simply.</p>
+                <p>✔️ Contrary to popular simply.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="plan">
+        <div class="plan-container content">
+          <h2 class="header">My Plans</h2>
+          <div class="plan-content">
+            <div class="plan-card">
+              <img src="images/icons/web.png" alt="" />
+              <h3>Web Development</h3>
+              <p>I want to start</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
-</body>
+  </body>
 </html>
