--- a/index.html
+++ b/index.html
@@ -87,10 +87,64 @@
               <h3>Web Development</h3>
               <p>I want to start</p>
             </div>
+            <div class="plan-card">
+              <img src="images/icons/js.png" alt="" />
+              <h3>JavaScript</h3>
+              <p>I want to start</p>
+            </div>
+            <div class="plan-card">
+              <img src="images/icons/smoke.png" alt="" />
+              <h3>Smoking Habit</h3>
+              <p>I want to start</p>
+            </div>
+            <div class="plan-card">
+              <img src="images/icons/ecom.png" alt="" />
+              <h3>Web Development</h3>
+              <p>I want to start</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="manidset">
+        <div class="maindset-container content">
+          <div class="maindset-content">
+            <h2>Awlays keep a positive mindset</h2>
+            <button class="btn">Call Now</button>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section id="future">
+        <div class="future-cintainer content">
+          <div class="future-content">
+            <div class="social">
+              <h1>Future</h1>
+              <p class="header-text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words
+              </p>
+              <p>info@gamail.com</p>
+              <p>+88 01750-000000</p>
+
+              <a href="#"><img src="images/icons/fb.png" alt="" /></a>
+              <a href="#"><img src="images/icons/twitter.png" alt="" /></a>
+              <a href="#"><img src="images/icons/youtube.png" alt="" /></a>
+            </div>
+            <div class="form">
+              <h2>Subscribe</h2>
+              <div>
+                <input type="text" placeholder="Enter Your Email" />
+              </div>
+              <div>
+                <input class="btn" type="submit" value="Subscribe" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
